[package]

name = "filestore"
version = "0.4.1"
authors = ["Mike Dilger <mike@efx.co.nz>"]
license = "MIT"

[features]
default = [ "serde", "serde_derive", "postgres" ]

[dependencies]
log = "0.4"
byteorder = "1.3"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
rust-crypto = "0.2"
clippy = { version = "0.0", optional = true }
postgres = { version = "0.15", optional = true }
phf_codegen = "0.7"
