[package]
name = "filestore"
version = "0.4.1"
authors = ["Mike Dilger <mike@efx.co.nz>"]
license = "MIT"
edition = "2018"

[features]
default = [ "serde", "postgres" ]

[dependencies]
log = "0.4"
byteorder = "1.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
rust-crypto = "0.2"
clippy = { version = "0.0", optional = true }
postgres = { version = "0.15", optional = true }
phf_codegen = "0.7"
